# acumos-c-client

./: .gitignore  .gitmodules  .gitreview  CMakeLists.txt  INFO.yaml  LICENSE.txt  README.md  cpp-client.py  groups  hello-world.c  project.config
acumos/: auth.py  metadata.py  session.py  utils.py
acumos/c_client/: __init__.py  module.py
acumos_cpp/: _version.py  auth.py  logging.py  metadata.py  session.py  utils.py
acumos_cpp/c_client/: module.py
docs/: api-docs.rst  developer-guide.rst  index.rst  onboarding-Cpp-guide.rst  release-notes.rst  user-guide.rst
examples/iris-kmeans/: .cproject  .gitignore  .project  CMakeLists.txt  iris-kmeans.c  readme.txt
examples/iris-kmeans/data/: .gitignore
examples/iris-kmeans/src/: bench.cpp  iris-kmeans.cpp  simple.cpp
examples/iris-kmeans/step2_serialize_model/: .gitignore  CMakeLists.txt  centroids.proto  load-iris-kmeans.cpp  readme.txt  save-iris-kmeans.cpp
examples/iris-kmeans/step3_model_microservice/: .gitignore  CMakeLists.txt  readme.txt  run-microservice.cpp
